# peaks-over-threshold

./: README.md  pyproject.toml
examples/: 01_spot_air_quality.ipynb  01_spot_air_quality.py  02_spot_electric_power_consumption.ipynb  02_spot_electric_power_consumption.py  utils.py
src/peaks_over_threshold/: __init__.py  pot.py
